node-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shubu
spec: 
  containers:
  - name: imageprocess
    image: mongo
