node-svc.yaml
#service: LoadBalancer
#node-svc.yaml

apiVersion: v1
kind: Service

metadata: 
  name: my-service
  namespace: my-namespace
spec:
  selector:
    appl2: improc
  type: LoadBalancer
  ports:
   - protocol: TCP  
     port: 80
     targetPort: 5000
